Add link default for web-idl Promise
Fixes build error: https://github.com/w3c/webcodecs/pull/152/checks?check_run_id=2454320510

      LINK ERROR: Multiple possible 'Promise' idl refs.
      Arbitrarily chose https://www.w3.org/TR/css-font-loading-3/#dom-promise
      To auto-select one of the following refs, insert one of these lines into a <pre class=link-defaults> block:
      spec:css-font-loading-3; type:interface; text:Promise
      spec:webidl; type:interface; text:Promise
      {{Promise}}

--- a/index.src.html
+++ b/index.src.html
@@ -27,6 +27,10 @@ Markup Shorthands:css no, markdown yes, dfn yes
 !Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
 </pre>
 
+<pre class=link-defaults>
+spec:webidl; type:interface; text:Promise
+</pre>
+
 <pre class='anchors'>
 spec: media-source; urlPrefix: https://www.w3.org/TR/media-source/
     type: method
