Clarify that ImageDecoder.tracks returns a live object

--- a/index.src.html
+++ b/index.src.html
@@ -41,6 +41,7 @@ spec: html; urlPrefix: https://html.spec.whatwg.org/multipage/;
         type: attribute; text: resizeWidth; url:#dom-imagebitmapoptions-resizewidth
         type: attribute; text: resizeHeight; url:#dom-imagebitmapoptions-resizeheight
     type: dfn; text: global object; url: webappapis.html#global-object
+    type: dfn; text: live; url: infrastructure.html#live
 
 spec: mediacapture-streams; urlPrefix: https://www.w3.org/TR/mediacapture-streams/
     for: mediaDevices;
@@ -2452,8 +2453,8 @@ interface ImageDecoder {
 ### Attributes ### {#imagedecoder-attributes}
 
 : <dfn attribute for=ImageDecoder>tracks</dfn>
-:: Provides metadata for the available tracks and a mechanism for selecting a
-    track to decode.
+:: Returns a [=live=] {{ImageTrackList}}, which provides metadata
+    for the available tracks and a mechanism for selecting a track to decode.
 
     The {{ImageDecoder/tracks}} getter steps are to return
     {{ImageDecoder/[[ImageTrackList]]}}.
