Relax media resource lifetime to be 'at least as' long as its references

--- a/index.src.html
+++ b/index.src.html
@@ -1851,8 +1851,8 @@ frame.
 will clear their [[resource reference]] slot, releasing the reference their
 [=media resource=]
 
-A [=media resource=] must remain alive as long as it continues to be referenced
-by a `[[resource reference]]`.
+A [=media resource=] must remain alive at least as long as it continues to be
+referenced by a `[[resource reference]]`.
 
 NOTE: When a [=media resource=] is no longer referenced by a
     `[[resource reference]]`, the resource may be destroyed. User agents are
