--- a/index.src.html
+++ b/index.src.html
@@ -676,7 +676,7 @@ dictionary EncodedAudioChunkMetadata {
 
 callback EncodedAudioChunkOutputCallback =
     undefined (EncodedAudioChunk output,
-               optional EncodedAudioChunkMetadata metadata);
+               optional EncodedAudioChunkMetadata metadata = {});
 </xmp>
 
 Internal Slots {#audioencoder-internal-slots}
@@ -921,7 +921,7 @@ dictionary EncodedVideoChunkMetadata {
 
 callback EncodedVideoChunkOutputCallback =
     undefined (EncodedVideoChunk chunk,
-               optional EncodedVideoChunkMetadata metadata);
+               optional EncodedVideoChunkMetadata metadata = {});
 </xmp>
 
 Internal Slots {#videoencoder-internal-slots}
