Add mp4 decode/demux demo
This demo is updated and migrated from https://tguilbert-google.github.io/webcodecs/mp4/index.html.

It uses mp4box.js to demux an mp4 file and generate the decoderConfig, and VideoDecoder to decode the frames.

The VideoFrames are displayed as fast as possible on screen, without consideration for the playback rate.

--- a/samples/index.html
+++ b/samples/index.html
@@ -11,9 +11,9 @@
   <div id="header"><h1><a href="/">WebCodecs API</a></h1></div>
   <div id="wrapper">
     <div id="content">
-    <article onclick="window.location.href='/';">
-      <h1><a href="/">Sample Demo 1</a></h1>
-      <p>A sample that shows cool WebCodecs stuff.</p>
+    <article onclick="window.location.href='/samples/mp4-decode/';">
+      <h1><a href="/samples/mp4-decode/">MP4 Decoding</a></h1>
+      <p>Demuxes (using mp4box.js) and decodes an mp4 file.</p>
     </article>
     <article onclick="window.location.href='/';">
       <h1><a href="/">Sample Demo 2</a></h1>
