Add link to mp4box.js

--- a/samples/mp4-decode/index.html
+++ b/samples/mp4-decode/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <p>
-    This demo extracts all frames from an MP4 file and renders them to a canvas as fast as possible. It uses mp4box.js to parse and demux the file.
+    This demo extracts all frames from an MP4 file and renders them to a canvas as fast as possible. It uses <a href="https://github.com/gpac/mp4box.js/">mp4box.js</a> to parse and demux the file.
   </p>
   <p>
     Frames extracted: <span id="frameCount"></span>
