--- a/samples/mp4-decode/index.html
+++ b/samples/mp4-decode/index.html
@@ -10,7 +10,7 @@
     This demo extracts all frames from an MP4 file and renders them to a canvas as fast as possible. It uses <a href="https://github.com/gpac/mp4box.js/">mp4box.js</a> to parse and demux the file.
   </p>
   <p>
-    Frames extracted: <span id="frameCount"></span>
+    Frames extracted: <span id="frameStats"></span>
   </p>
   <canvas></canvas>
 </body>
@@ -26,13 +26,24 @@
   document.body.appendChild(canvas);
 
   var frameCount = 0;
+  var startTime;
 
   async function onFrame(frame) {
+    let now = performance.now();
+
     ctx.drawImage(frame, 0, 0, canvas.width, canvas.height);
     frame.close();
 
-    ++frameCount;
-    document.getElementById("frameCount").innerText = frameCount;
+    let fps = "";
+    if(frameCount++) {
+      let elapsed = now - startTime;
+      fps = " (" + (1000.0*frameCount/(elapsed)).toFixed(0) + " fps)"
+    } else {
+      // This is the first frame.
+      startTime = now;
+    }
+
+    document.getElementById("frameStats").innerText = frameCount + fps;
   }
 
   let decoder = new VideoDecoder({
