--- a/samples/index.html
+++ b/samples/index.html
@@ -15,9 +15,9 @@
       <h1><a href="/">Sample Demo 1</a></h1>
       <p>A sample that shows cool WebCodecs stuff.</p>
     </article>
-    <article onclick="window.location.href='/';">
-      <h1><a href="/">Sample Demo 2</a></h1>
-      <p>A sample that shows cool WebCodecs stuff.</p>
+    <article onclick="window.location.href='/samples/image-decoder/animated-gif-renderer.html';">
+      <h1><a href="/samples/image-decoder/animated-gif-renderer.html">Animated GIF Renderer</a></h1>
+      <p>Using ImageDecoder to implement an animated GIF renderer.</p>
     </article>
     <article onclick="window.location.href='/';">
       <h1><a href="/">Sample Demo 3</a></h1>
