Update links and add readme.md
WebCodecs is hosted at https://w3c.github.io/webcodecs/, which means that hrefs starting with '/samples/' need to start with '/webcodecs/samples/'

This commit also adds a convenient link for ease of access to the samples from the github.

--- a/samples/index.html
+++ b/samples/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 <div id="container">
-  <div id="nav"><ul><li><a href="/samples">Samples</a></li></ul></div>
-  <div id="header"><h1><a href="/">WebCodecs API</a></h1></div>
+  <div id="nav"><ul><li><a href="/webcodecs/samples">Samples</a></li></ul></div>
+  <div id="header"><h1><a href="/webcodecs/">WebCodecs API</a></h1></div>
   <div id="wrapper">
     <div id="content">
-    <article onclick="window.location.href='/samples/mp4-decode/';">
-      <h1><a href="/samples/mp4-decode/">MP4 Decoding</a></h1>
+    <article onclick="window.location.href='/webcodecs/samples/mp4-decode/';">
+      <h1><a href="/webcodecs/samples/mp4-decode/">MP4 Decoding</a></h1>
       <p>Demuxes (using mp4box.js) and decodes an mp4 file.</p>
     </article>
-    <article onclick="window.location.href='/samples/image-decoder/animated-gif-renderer.html';">
-      <h1><a href="/samples/image-decoder/animated-gif-renderer.html">Animated GIF Renderer</a></h1>
+    <article onclick="window.location.href='/webcodecs/samples/image-decoder/animated-gif-renderer.html';">
+      <h1><a href="/webcodecs/samples/image-decoder/animated-gif-renderer.html">Animated GIF Renderer</a></h1>
       <p>Using ImageDecoder to implement an animated GIF renderer.</p>
     </article>
     <article onclick="window.location.href='/';">
