--- a/samples/mp4-decode/index.html
+++ b/samples/mp4-decode/index.html
@@ -19,7 +19,7 @@
 
 <script type="module">
   import {MP4Demuxer} from "./mp4_demuxer.js";
-  let demuxer = new MP4Demuxer("/samples/media/bbb.mp4");
+  let demuxer = new MP4Demuxer("/webcodecs/samples/media/bbb.mp4");
 
   var canvas = document.querySelector("canvas");
   var ctx = canvas.getContext('2d');
