Migrate webcam in worker demo
This commit migrates a demo showcasing how to transfer MediaStreamTrackProcessor's ReadableStream to a a worker. The original link is from:
https://tguilbert-google.github.io/webcodecs/mstp_worker/index.html

--- a/samples/index.html
+++ b/samples/index.html
@@ -19,9 +19,9 @@
       <h1><a href="/webcodecs/samples/image-decoder/animated-gif-renderer.html">Animated GIF Renderer</a></h1>
       <p>Using ImageDecoder to implement an animated GIF renderer.</p>
     </article>
-    <article onclick="window.location.href='/';">
-      <h1><a href="/">Sample Demo 3</a></h1>
-      <p>A sample that shows cool WebCodecs stuff.</p>
+    <article onclick="window.location.href='/webcodecs/samples/webcam-in-worker/';">
+      <h1><a href="/webcodecs/samples/webcam-in-worker/">Webcam in worker</a></h1>
+      <p>Reading a VideoFrame Stream coming from a webcam, in a worker context.</p>
     </article>
     <article onclick="window.location.href='/';">
       <h1><a href="/">Sample Demo 4</a></h1>
