Define AudioDataCopyToOptions with frameOffset and frameCount

--- a/index.src.html
+++ b/index.src.html
@@ -1930,11 +1930,11 @@ interface AudioData {
   readonly attribute float sampleRate;
   readonly attribute unsigned long numberOfFrames;
   readonly attribute unsigned long numberOfChannels;
-  readonly attribute unsigned long allocationSize;
+  readonly attribute unsigned long byteLength;
   readonly attribute unsigned long long duration;
   readonly attribute unsigned long long timestamp;
 
-  undefined copyTo([AllowShared] BufferSource destination, unsigned long planeNumber);
+  undefined copyTo([AllowShared] BufferSource destination, AudioDataCopyToOptions options);
   AudioData clone();
   undefined close();
 };
@@ -2021,11 +2021,11 @@ dictionary AudioDataInit {
     The {{AudioData/numberOfChannels}} getter steps are to return
     {{AudioData/[[number of channels]]}}.
 
-: <dfn attribute for=AudioData>allocationSize</dfn>
+: <dfn attribute for=AudioData>byteLength</dfn>
 :: The the number of bytes allocated to hold all of the samples in this
     {{AudioData}}.
 
-    The {{AudioData/allocationSize}} getter steps are to:
+    The {{AudioData/byteLength}} getter steps are to:
     1. Let |sampleSize| be the number of bytes per sample, as defined by the
         {{AudioData/[[sample format]]}}.
     2. Return the product of multiplying |sampleSize| by
@@ -2049,7 +2049,7 @@ dictionary AudioDataInit {
 
 ### Methods ###{#audiodata-methods}
 : <dfn method for=AudioData>
-      copyTo(|destination|, |planeNumber|)
+      copyTo(|destination|, |options|)
     </dfn>
 :: Copies the samples from the specified plane of the {{AudioData}} to the
     destination buffer.
@@ -2057,16 +2057,28 @@ dictionary AudioDataInit {
     When invoked, run these steps:
     1. If the value of |frame|'s {{AudioData/[[detached]]}} internal slot is
         `true`, throw an {{InvalidStateError}} {{DOMException}}.
-    2. Let |allocationSize| be the number of bytes allocated to hold this
-        {{AudioData}}'s [=media resource=], as described by the getter steps of
-        {{AudioData/allocationSize}}.
-    3. If |allocationSize| is greater than `destination.byteLength`, throw a
-        {{TypeError}}.
-    4. Let |resource| be the [=media resource=] referenced by
+    2. Let |frameCount| be the number of frames in each plane of this
+        {{AudioData}}'s' [=media resource=], as defined by the getter steps of
+        {{AudioData/frameCount}}.
+    3. If |options|.{{AudioDataCopyToOptions/frameOffset}} is greater than or
+        equal to |frameCount|, throw a {{RangeError}}.
+    4. Let |copyFrameCount| be the difference of subtracting
+        |options|.{{AudioDataCopyToOptions/frameOffset}} from |frameCount|.
+    5. If |options|.{{AudioDataCopyToOptions/frameCount}} [=map/exists=]:
+        1. If |options|.{{AudioDataCopyToOptions/frameCount}} is greater than
+            |copyFrameCount|, throw a {{RangeError}}.
+        2. Otherwise, assign |options|.{{AudioDataCopyToOptions/frameCount}}
+            to |copyFrameCount|.
+    6. Let |bytesPerSample| be the number of bytes per sample, as defined by
+        the {{AudioData/[[sample format]]}}.
+    7. If the product of multiplying |bytesPerSample| by |copyFrameCount| is
+        greater than `destination.byteLength`, throw a {{RangeError}}.
+    8. Let |resource| be the [=media resource=] referenced by
         {{AudioData/[[resource reference]]}}.
-    5. Let |planeBytes| be the region of |resource| corresponding to
-        |planeNumber|.
-    6. Copy the |planeBytes| into |destination|.
+    9. Let |planeFrames| be the region of |resource| corresponding to
+        |options|.{{AudioDataCopyToOptions/planeNumber}}.
+    10. Copy the range of |planeFrame| into |destination|, starting with the
+        byte positioned at |options|.{{AudioDataCopyToOptions/frameOffset}} and stopping after |copyFrameCount| frames have been copied.
 
 : <dfn method for=AudioData>clone()</dfn>
 :: Creates a new AudioData with a reference to the same [=media resource=].
@@ -2101,6 +2113,27 @@ dictionary AudioDataInit {
             {{AudioData/[[timestamp]]}} slots to the corresponding slots in
             |clone|.
     2. Return |clone|.
+
+### AudioDataCopyToOptions ### {#audiodata-copy-to-options}
+
+<xmp class='idl'>
+dictionary AudioDataCopyToOptions {
+  required unsigned long planeNumber;
+  unsigned long frameOffset = 0;
+  unsigned long frameCount;
+};
+</xmp>
+
+: <dfn dict-member for=AudioDataCopyToOptions>planeNumber</dfn>
+:: The number identifying the plane to copy from.
+
+: <dfn dict-member for=AudioDataCopyToOptions>frameOffset</dfn>
+:: An offset into the source plane data indicating which frame to begin
+    copying from. Defaults to `0`.
+
+: <dfn dict-member for=AudioDataCopyToOptions>frameCount</dfn>
+:: The number of frames to copy. If not provided, the copy will include all
+    frames in the plane beginning with {{AudioDataCopyToOptions/frameOffset}}.
 
 Audio Sample Format{#audio-sample-format}
 -----------------------------------------
