--- a/index.src.html
+++ b/index.src.html
@@ -2059,7 +2059,7 @@ dictionary AudioDataInit {
         `true`, throw an {{InvalidStateError}} {{DOMException}}.
     2. Let |frameCount| be the number of frames in each plane of this
         {{AudioData}}'s' [=media resource=], as defined by the getter steps of
-        {{AudioData/frameCount}}.
+        {{AudioData/numberOfFrames}}.
     3. If |options|.{{AudioDataCopyToOptions/frameOffset}} is greater than or
         equal to |frameCount|, throw a {{RangeError}}.
     4. Let |copyFrameCount| be the difference of subtracting
@@ -2077,7 +2077,7 @@ dictionary AudioDataInit {
         {{AudioData/[[resource reference]]}}.
     9. Let |planeFrames| be the region of |resource| corresponding to
         |options|.{{AudioDataCopyToOptions/planeNumber}}.
-    10. Copy the range of |planeFrame| into |destination|, starting with the
+    10. Copy frames of |planeFrames| into |destination|, starting with the
         byte positioned at |options|.{{AudioDataCopyToOptions/frameOffset}} and stopping after |copyFrameCount| frames have been copied.
 
 : <dfn method for=AudioData>clone()</dfn>
