--- a/samples/index.html
+++ b/samples/index.html
@@ -24,12 +24,8 @@
       <p>Reading a VideoFrame Stream coming from a webcam, in a worker context.</p>
     </article>
     <article onclick="window.location.href='/webcodecs/capture-to-file/capture-to-file.html';">
-      <h1><a href="/webcodecs/capture-to-file/capture-to-file.html">Capture To File</a></h1>
-      <p>Reading from camera, compressing via webcodecs and creating a webm file on disk.</p>
-    </article>
-    <article onclick="window.location.href='/';">
-      <h1><a href="/">Sample Demo 5</a></h1>
-      <p>A sample that shows cool WebCodecs stuff.</p>
+      <h1><a href="/webcodecs/samples/capture-to-file/capture-to-file.html">Capture To File</a></h1>
+      <p>Reading from camera, encoding via webcodecs, and creating a webm file on disk.</p>
     </article>
   </div>
 </div>
